change navbar item name to about

--- a/src/lib/config.json
+++ b/src/lib/config.json
@@ -5,8 +5,8 @@
             "url": "/"
         },
         {
-            "text": "Personal Bio",
-            "url": "/bio"
+            "text": "About",
+            "url": "/about"
         }
     ],
     "landing_social_items": [
