--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
 		"vite": "^4.4.2",
 		"vitest": "^0.34.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"async-mutex": "^0.4.0"
+	}
 }
